--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,9 @@
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "${fileDirname}/${fileBasenameNoExtension}",
+                "-std=c++17",
+                "-pthread"
             ],
             "options": {
                 "cwd": "${fileDirname}"
