--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,8 +11,18 @@
                 "${file}",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}",
+                "-Wall",
+                "-Wextra",
+                "-Wshadow",
+                "-W",
+                "-g",
+                "-lm",
+                "-W",
+                "-Wconversion",
                 "-std=c++14",
-                "-pthread"
+                "-O2",
+                "-pthread",
+                "-DPAPERDOG"
             ],
             "options": {
                 "cwd": "${fileDirname}"
