--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,5 +94,11 @@
         "UVA"
     ],
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
+    "python.linting.flake8Enabled": true,
+    "python.formatting.provider": "yapf",
+    "python.linting.flake8Args": [
+        "--max-line-length=248"
+    ],
+    "python.linting.pylintEnabled": false
 }
