--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,38 @@
             "problemMatcher": [
                 "$gcc"
             ],
+            "group": "build",
+            "detail": "调试器生成的任务。"
+        },
+        {
+            "type": "cppbuild",
+            "label": "C/C++: g++ 生成活动文件",
+            "command": "/usr/bin/g++",
+            "args": [
+                "-fdiagnostics-color=always",
+                "-g",
+                "${file}",
+                "-o",
+                "${fileDirname}/${fileBasenameNoExtension}",
+                "-Wall",
+                "-Wextra",
+                "-Wshadow",
+                "-W",
+                "-g",
+                "-lm",
+                "-W",
+                "-Wconversion",
+                "-std=c++14",
+                "-O2",
+                "-pthread",
+                "-DPAPERDOG"
+            ],
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
             "group": {
                 "kind": "build",
                 "isDefault": true
