--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -122,5 +122,6 @@
         "terminal.ansiRed": "#D8137F",
         "terminal.ansiWhite": "#6C696E",
         "terminal.ansiYellow": "#DC8A0E"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
