--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -38,10 +38,12 @@
                 "-Wall",
                 "-Wextra",
                 "-Wshadow",
-                "-W",
-                "-g",
-                "-lm",
-                "-W",
+                "-pedantic",
+                "-Wformat=2",
+                "-Wfloat-equal",
+                "-Wlogical-op",
+                "-Wcast-qual",
+                "-Wcast-align",
                 "-Wconversion",
                 "-std=c++14",
                 "-O2",
