--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -122,5 +122,95 @@
         "terminal.ansiRed": "#D8137F",
         "terminal.ansiWhite": "#6C696E",
         "terminal.ansiYellow": "#DC8A0E"
-    }
+    },
+    "latex-workshop.view.pdf.viewer": "tab", //tab:使用VSCode自带的pdf阅读器
+    "latex-workshop.latex.autoClean.run": "onBuilt", //何时应删除LaTeX辅助文件,要清理的文件夹在latex-workshop.latex.outDir中定义,onFailed:在编译失败时清除项目,onBuild:不论编译成功与否都在编译终止时清除项目
+    "latex-workshop.latex.autoBuild.run": "never", //onFileChange:在检测到任何文件中的更改（甚至被其他应用程序修改）时编译（默认）,never:当你命令编译时才编译
+    "[latex]": {
+        "editor.formatOnSave": false, //true:在保存时格式化文件。格式化程序必须可用,延迟后文件不能保存,并且编辑器不能关闭
+    },
+    "latex-workshop.latex.tools": [
+        {
+            // 编译工具和命令
+            "name": "xelatex",
+            "command": "xelatex",
+            "args": [
+                "-synctex=1",
+                "-interaction=nonstopmode",
+                "-file-line-error",
+                "-pdf",
+                "%DOCFILE%"
+            ]
+        },
+        {
+            "name": "pdflatex",
+            "command": "pdflatex",
+            "args": [
+                "-synctex=1",
+                "-interaction=nonstopmode",
+                "-file-line-error",
+                "%DOCFILE%"
+            ]
+        },
+        {
+            "name": "bibtex",
+            "command": "bibtex",
+            "args": [
+                "%DOCFILE%"
+            ]
+        }
+    ],
+    "latex-workshop.latex.recipes": [
+        {
+            "name": "xelatex",
+            "tools": [
+                "xelatex"
+            ],
+        },
+        {
+            "name": "pdflatex",
+            "tools": [
+                "pdflatex"
+            ]
+        },
+        {
+            "name": "xe->bib->xe->xe",
+            "tools": [
+                "xelatex",
+                "bibtex",
+                "xelatex",
+                "xelatex"
+            ]
+        },
+        {
+            "name": "pdf->bib->pdf->pdf",
+            "tools": [
+                "pdflatex",
+                "bibtex",
+                "pdflatex",
+                "pdflatex"
+            ]
+        }
+    ],
+    "latex-workshop.latex.clean.fileTypes": [ //要清理的文件,此属性必须是字符串数组 例如 *.removemable
+        "*.aux",
+        "*.bbl",
+        "*.blg",
+        "*.idx",
+        "*.ind",
+        "*.lof",
+        "*.lot",
+        "*.out",
+        "*.toc",
+        "*.acn",
+        "*.acr",
+        "*.alg",
+        "*.glg",
+        "*.glo",
+        "*.gls",
+        "*.ist",
+        "*.fls",
+        "*.log",
+        "*.fdb_latexmk",
+    ],
 }
