--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,32 +3,8 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: g++ 编译运行",
-            "command": "/usr/bin/g++",
-            "args": [
-                "-fdiagnostics-color=always",
-                "-g",
-                "${file}",
-                "-o",
-                "${fileDirname}/${fileBasenameNoExtension}",
-                "-std=c++17",
-                "-O2",
-                "-pthread",
-                "-DPAPERDOG"
-            ],
-            "options": {
-                "cwd": "${fileDirname}"
-            },
-            "problemMatcher": [
-                "$gcc"
-            ],
-            "group": "build",
-            "detail": "调试器生成的任务。"
-        },
-        {
-            "type": "cppbuild",
             "label": "C/C++: g++ 生成活动文件",
-            "command": "/usr/bin/g++",
+            "command": "/usr/bin/g++-10",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
@@ -45,7 +21,7 @@
                 "-Wcast-qual",
                 "-Wcast-align",
                 "-Wconversion",
-                "-std=c++17",
+                "-std=c++20",
                 "-O2",
                 "-pthread",
                 "-DPAPERDOG"
