--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,7 +88,10 @@
         "semaphore": "cpp",
         "span": "cpp",
         "stop_token": "cpp",
-        "syncstream": "cpp"
+        "syncstream": "cpp",
+        "expected": "cpp",
+        "spanstream": "cpp",
+        "stacktrace": "cpp"
     },
     "python.testing.pytestArgs": [
         "UVA"
