--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "type": "cppbuild",
             "label": "C/C++: g++ 生成活动文件",
-            "command": "/usr/bin/g++-11",
+            "command": "LANG=C&&/usr/bin/g++",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
