--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,7 +91,8 @@
         "syncstream": "cpp",
         "expected": "cpp",
         "spanstream": "cpp",
-        "stacktrace": "cpp"
+        "stacktrace": "cpp",
+        "hash_map": "cpp"
     },
     "python.testing.pytestArgs": [
         "UVA"
